<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bzzt</string>
    <string name="hello_world">Hello world!</string>
    <string name="recording">Recording</string>
    <string name="accel_x">X:</string>
    <string name="accel_Y">Y:</string>
    <string name="accel_Z">Z:</string>
    <string name="gps_lat">Lat:</string>
    <string name="gps_long">Long:</string>
    <string name="off">Off</string>
    <string name="browse_dialog_title">Begin Your Journey</string>
    <string-array name="browse_dialog_stop_items">
        <item>Stop Ride</item>
        <item>Add Notice</item>
    </string-array>
    <string-array name="browse_dialog_start_items">
        <item >Begin Ride</item>
        <item >Add Notice</item>
    </string-array>

</resources>
