<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ToggleButton
        android:id="@+id/toggleButtonRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toggleButtonRecording"
        android:layout_centerHorizontal="true"
        android:text="@string/recording"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewXLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/accel_x" />

    <TextView
        android:id="@+id/textViewYLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewXLabel"
        android:layout_below="@+id/textViewXLabel"
        android:text="@string/accel_Y" />

    <TextView
        android:id="@+id/textViewZLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewYLabel"
        android:layout_below="@+id/textViewYLabel"
        android:text="@string/accel_Z" />

    <TextView
        android:id="@+id/textViewLatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewZLabel"
        android:layout_below="@+id/textViewZLabel"
        android:layout_marginTop="28dp"
        android:text="@string/gps_lat" />

    <TextView
        android:id="@+id/textViewLongLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewLatLabel"
        android:layout_below="@+id/textViewLatLabel"
        android:text="@string/gps_long" />

    <TextView
        android:id="@+id/textViewXValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewXLabel"
        android:layout_alignBottom="@+id/textViewXLabel"
        android:layout_alignLeft="@+id/toggleButtonRecording"
        android:text="dummy x val" />

    <TextView
        android:id="@+id/textViewYValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewYLabel"
        android:layout_alignBottom="@+id/textViewYLabel"
        android:layout_alignLeft="@+id/textViewXValue"
        android:text="dummy y val" />

    <TextView
        android:id="@+id/textViewZValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewZLabel"
        android:layout_alignBottom="@+id/textViewZLabel"
        android:layout_alignLeft="@+id/textViewYValue"
        android:text="dummy z val" />

    <TextView
        android:id="@+id/textViewLatValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewLatLabel"
        android:layout_alignLeft="@+id/textViewZValue"
        android:text="dummy lat val" />

    <TextView
        android:id="@+id/textViewLongValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewLongLabel"
        android:layout_alignBottom="@+id/textViewLongLabel"
        android:layout_alignLeft="@+id/textViewLatValue"
        android:text="dummy long val" />

</RelativeLayout>
